--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,16 +1,24 @@
 
 include ../.env
 
-WEBREPL_CLI = ../3rdparty/webrepl_cli.py
 PYTHON = ../.venv/bin/python
 MPREMOTE = ../.venv/bin/mpremote
 
-push:
-	$(PYTHON) $(WEBREPL_CLI) -p $(WEBREPL_PASSWORD) boot.py $(WEBREPL_IP):boot.py
-	$(PYTHON) $(WEBREPL_CLI) -p $(WEBREPL_PASSWORD) main.py $(WEBREPL_IP):main.py
-	$(PYTHON) $(WEBREPL_CLI) -p $(WEBREPL_PASSWORD) ../.env $(WEBREPL_IP):device.env
+WEBREPL_CLI = $(PYTHON) ../3rdparty/webrepl_cli.py -p $(WEBREPL_PASSWORD)
 
+FILES = boot.py main.py
+
+repl:
+	$(WEBREPL_CLI) $(WEBREPL_IP):$(WEBREPL_PORT)
+
+push:
+	@$(WEBREPL_CLI) ../.env $(WEBREPL_IP):$(WEBREPL_PORT):device.env
+	@for file in $(FILES); do \
+		echo; \
+		$(WEBREPL_CLI) $$file $(WEBREPL_IP):$(WEBREPL_PORT):$$file; \
+	done
+
+# Push enough to get the WebREPL running
 push-local:
+	$(MPREMOTE) connect $(SERIAL_PORT) fs cp ../.env :device.env
 	$(MPREMOTE) connect $(SERIAL_PORT) fs cp boot.py :
-	$(MPREMOTE) connect $(SERIAL_PORT) fs cp main.py :
-	$(MPREMOTE) connect $(SERIAL_PORT) fs cp ../.env :.env
