--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ micropython-esp32-stubs==1.25.0.post5
 micropython-stdlib-stubs==1.25.0
 mpremote==1.25.0
 pyserial==3.5
-bleak>=0.21.0 # For BLE test client
+bleak==0.22.3 # For BLE test client
