--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,6 +1,6 @@
 {
   "typeCheckingMode": "strict",
   "reportMissingModuleSource": false,
-  "extraPaths": [".venv/lib/python3.10/site-packages"],
+  "extraPaths": ["firmware/.venv/lib/python3.10/site-packages"],
   "stubPath": "firmware/stubs"
 }
