split 3rdparty into its own makefile

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -11,10 +11,7 @@ SRC_DIR = src
 # Find all Python files in src directory recursively (following symlinks)
 SRC_FILES := $(shell find -L $(SRC_DIR) -type f -name '*.py')
 
-# Third-party dependency files from sources.txt
-THIRDPARTY_FILES := $(shell grep -v '^\#' 3rdparty/sources.txt | grep -v '^$$$$' | awk '{print "3rdparty/" $$1}')
-
-.PHONY: repl push push-local repl-local update-3rdparty $(THIRDPARTY_FILES)
+.PHONY: repl push push-local repl-local update-3rdparty
 
 repl:
 	$(WEBREPL_CLI) $(WEBREPL_IP):$(WEBREPL_PORT)
@@ -38,17 +35,5 @@ repl-local:
 	$(MPREMOTE) repl $(SERIAL_PORT)
 
 # Update all third-party dependencies
-update-3rdparty: $(THIRDPARTY_FILES)
-	@echo "Done! All third-party dependencies updated."
-
-# Generate a target for each file in 3rdparty/sources.txt
-$(THIRDPARTY_FILES):
-	@echo "Updating $@..."
-	@mkdir -p $$(dirname $@); \
-	relpath=$$(echo $@ | sed 's|^3rdparty/||'); \
-	url=$$(grep -v '^#' 3rdparty/sources.txt | grep "^$$relpath[[:space:]]" | awk '{print $$2}'); \
-	if [ -z "$$url" ]; then \
-		echo "Error: No URL found for $$relpath in 3rdparty/sources.txt"; \
-		exit 1; \
-	fi; \
-	curl -f -L -o "$@" "$$url" || { echo "Failed to download $@"; exit 1; }
+update-3rdparty:
+	$(MAKE) -C 3rdparty update
