--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -11,12 +11,22 @@ SRC_DIR = src
 # Find all Python files in src directory recursively (following symlinks)
 SRC_FILES := $(shell find -L $(SRC_DIR) -type f -name '*.py')
 
-.PHONY: help repl push push-local repl-local update-3rdparty
+# Main source files to push separately (frequently changing), relative to $(SRC_DIR)
+MAIN_FILES_REL := main.py
+
+# Convert to full paths for filtering
+MAIN_FILES := $(addprefix $(SRC_DIR)/,$(MAIN_FILES_REL))
+
+# Filter out main files to get only library files
+LIB_FILES := $(filter-out $(MAIN_FILES),$(SRC_FILES))
+
+.PHONY: help repl push push-lib push-local repl-local update-3rdparty
 
 help:
 	@echo "Available commands:"
 	@echo "  make repl            - Connect to WebREPL"
-	@echo "  make push            - Push source files to device via WebREPL"
+	@echo "  make push            - Push main.py to device via WebREPL"
+	@echo "  make push-lib        - Push all supporting files (libs, config, etc.) to device via WebREPL"
 	@echo "  make push-local      - Push boot files to device via serial (for initial setup)"
 	@echo "  make repl-local      - Connect to REPL via serial"
 	@echo "  make update-3rdparty - Update all third-party dependencies"
@@ -27,8 +37,16 @@ repl:
 	$(WEBREPL_CLI) $(WEBREPL_IP):$(WEBREPL_PORT)
 
 push:
+	@for file in $(MAIN_FILES); do \
+		relative=$$(echo $$file | sed 's|^$(SRC_DIR)/||'); \
+		echo "Pushing $$relative..."; \
+		$(WEBREPL_CLI) $$file $(WEBREPL_IP):$(WEBREPL_PORT):$$relative; \
+	done
+
+push-lib:
+	@echo "Pushing device.env..."
 	@$(WEBREPL_CLI) .env $(WEBREPL_IP):$(WEBREPL_PORT):device.env
-	@for file in $(SRC_FILES); do \
+	@for file in $(LIB_FILES); do \
 		relative=$$(echo $$file | sed 's|^$(SRC_DIR)/||'); \
 		echo "Pushing $$relative..."; \
 		$(WEBREPL_CLI) $$file $(WEBREPL_IP):$(WEBREPL_PORT):$$relative; \
