--- a/firmware/pyrightconfig.json
+++ b/firmware/pyrightconfig.json
@@ -1,6 +1,6 @@
 {
   "typeCheckingMode": "strict",
   "reportMissingModuleSource": false,
-  "extraPaths": [".venv/lib/python3.10/site-packages", "3rdparty/device"],
+  "extraPaths": [".venv/lib/python3.10/site-packages", "3rdparty/device", "boot"],
   "stubPath": "stubs"
 }
